--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -92,7 +92,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n"
       ]
     },
     {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "X0vbffYg_qRH"
       },
@@ -123,228 +123,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "TXofQ_DF_qRH",
         "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>destination</th>\n",
-              "      <th>passanger</th>\n",
-              "      <th>weather</th>\n",
-              "      <th>temperature</th>\n",
-              "      <th>time</th>\n",
-              "      <th>coupon</th>\n",
-              "      <th>expiration</th>\n",
-              "      <th>gender</th>\n",
-              "      <th>age</th>\n",
-              "      <th>maritalStatus</th>\n",
-              "      <th>...</th>\n",
-              "      <th>CoffeeHouse</th>\n",
-              "      <th>CarryAway</th>\n",
-              "      <th>RestaurantLessThan20</th>\n",
-              "      <th>Restaurant20To50</th>\n",
-              "      <th>toCoupon_GEQ5min</th>\n",
-              "      <th>toCoupon_GEQ15min</th>\n",
-              "      <th>toCoupon_GEQ25min</th>\n",
-              "      <th>direction_same</th>\n",
-              "      <th>direction_opp</th>\n",
-              "      <th>Y</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Alone</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>55</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Restaurant(&lt;20)</td>\n",
-              "      <td>1d</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>10AM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>10AM</td>\n",
-              "      <td>Carry out &amp; Take away</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>1d</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5 rows × 26 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       destination  passanger weather  temperature  time  \\\n",
-              "0  No Urgent Place      Alone   Sunny           55   2PM   \n",
-              "1  No Urgent Place  Friend(s)   Sunny           80  10AM   \n",
-              "2  No Urgent Place  Friend(s)   Sunny           80  10AM   \n",
-              "3  No Urgent Place  Friend(s)   Sunny           80   2PM   \n",
-              "4  No Urgent Place  Friend(s)   Sunny           80   2PM   \n",
-              "\n",
-              "                  coupon expiration  gender age      maritalStatus  ...  \\\n",
-              "0        Restaurant(<20)         1d  Female  21  Unmarried partner  ...   \n",
-              "1           Coffee House         2h  Female  21  Unmarried partner  ...   \n",
-              "2  Carry out & Take away         2h  Female  21  Unmarried partner  ...   \n",
-              "3           Coffee House         2h  Female  21  Unmarried partner  ...   \n",
-              "4           Coffee House         1d  Female  21  Unmarried partner  ...   \n",
-              "\n",
-              "   CoffeeHouse CarryAway RestaurantLessThan20 Restaurant20To50  \\\n",
-              "0        never       NaN                  4~8              1~3   \n",
-              "1        never       NaN                  4~8              1~3   \n",
-              "2        never       NaN                  4~8              1~3   \n",
-              "3        never       NaN                  4~8              1~3   \n",
-              "4        never       NaN                  4~8              1~3   \n",
-              "\n",
-              "  toCoupon_GEQ5min toCoupon_GEQ15min toCoupon_GEQ25min direction_same  \\\n",
-              "0                1                 0                 0              0   \n",
-              "1                1                 0                 0              0   \n",
-              "2                1                 1                 0              0   \n",
-              "3                1                 1                 0              0   \n",
-              "4                1                 1                 0              0   \n",
-              "\n",
-              "  direction_opp  Y  \n",
-              "0             1  1  \n",
-              "1             1  0  \n",
-              "2             1  1  \n",
-              "3             1  0  \n",
-              "4             1  0  \n",
-              "\n",
-              "[5 rows x 26 columns]"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 12684 entries, 0 to 12683\n",
+            "Data columns (total 26 columns):\n",
+            " #   Column                Non-Null Count  Dtype \n",
+            "---  ------                --------------  ----- \n",
+            " 0   destination           12684 non-null  object\n",
+            " 1   passanger             12684 non-null  object\n",
+            " 2   weather               12684 non-null  object\n",
+            " 3   temperature           12684 non-null  int64 \n",
+            " 4   time                  12684 non-null  object\n",
+            " 5   coupon                12684 non-null  object\n",
+            " 6   expiration            12684 non-null  object\n",
+            " 7   gender                12684 non-null  object\n",
+            " 8   age                   12684 non-null  object\n",
+            " 9   maritalStatus         12684 non-null  object\n",
+            " 10  has_children          12684 non-null  int64 \n",
+            " 11  education             12684 non-null  object\n",
+            " 12  occupation            12684 non-null  object\n",
+            " 13  income                12684 non-null  object\n",
+            " 14  car                   108 non-null    object\n",
+            " 15  Bar                   12577 non-null  object\n",
+            " 16  CoffeeHouse           12467 non-null  object\n",
+            " 17  CarryAway             12533 non-null  object\n",
+            " 18  RestaurantLessThan20  12554 non-null  object\n",
+            " 19  Restaurant20To50      12495 non-null  object\n",
+            " 20  toCoupon_GEQ5min      12684 non-null  int64 \n",
+            " 21  toCoupon_GEQ15min     12684 non-null  int64 \n",
+            " 22  toCoupon_GEQ25min     12684 non-null  int64 \n",
+            " 23  direction_same        12684 non-null  int64 \n",
+            " 24  direction_opp         12684 non-null  int64 \n",
+            " 25  Y                     12684 non-null  int64 \n",
+            "dtypes: int64(8), object(18)\n",
+            "memory usage: 2.5+ MB\n"
+          ]
         }
       ],
       "source": [
-        "data.head()"
+        "data.head()\n",
+        "data.info()"
       ]
     },
     {
@@ -362,8 +189,31 @@
       "metadata": {
         "id": "6CwL6oWj_qRH"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "There are missing values in the dataset.\n",
+            "car                     12576\n",
+            "Bar                       107\n",
+            "CoffeeHouse               217\n",
+            "CarryAway                 151\n",
+            "RestaurantLessThan20      130\n",
+            "Restaurant20To50          189\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "if data.isnull().values.any():\n",
+        "    print(\"There are missing values in the dataset.\")\n",
+        "    # print out only the columns with missing data\n",
+        "    null_cols = data.isnull().sum()[data.isnull().sum()>0]\n",
+        "    print(null_cols)\n",
+        "else:\n",
+        "    print(\"No missing values found in the dataset.\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -380,8 +230,32 @@
       "metadata": {
         "id": "tyvoAC5F_qRI"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['never' 'less1' '1~3' 'gt8' 'unknown' '4~8']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# for missing cars is the vast majority of the data and existing dqta is useless for us to derive any key information on.\n",
+        "# we can todo it as data to be collected to see if theres any corelation\n",
+        "# just drop the column.\n",
+        "if('car' in data):  # this is a cell, multiple runs are possible. Defensive code\n",
+        "    # lets see what the values for existing cars are\n",
+        "    print(data['car'].unique())\n",
+        "    data = data.drop('car', axis=1)\n",
+        "\n",
+        "#print(data['Bar'].unique())\n",
+        "# all the other data is interesting enough to retain. Lets set the value to 'Unknown'\n",
+        "# lets see what the values for existing cars are\n",
+        "data.fillna('unknown', inplace=True)\n",
+        "\n",
+        "#check all done\n",
+        "assert null_cols.empty"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -671,7 +545,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -685,7 +559,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
