--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -123,229 +123,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 55,
       "metadata": {
         "id": "TXofQ_DF_qRH",
         "outputId": "2fc96a2c-1112-4b54-f24f-dbb9bc88abfb"
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>destination</th>\n",
-              "      <th>passanger</th>\n",
-              "      <th>weather</th>\n",
-              "      <th>temperature</th>\n",
-              "      <th>time</th>\n",
-              "      <th>coupon</th>\n",
-              "      <th>expiration</th>\n",
-              "      <th>gender</th>\n",
-              "      <th>age</th>\n",
-              "      <th>maritalStatus</th>\n",
-              "      <th>...</th>\n",
-              "      <th>CoffeeHouse</th>\n",
-              "      <th>CarryAway</th>\n",
-              "      <th>RestaurantLessThan20</th>\n",
-              "      <th>Restaurant20To50</th>\n",
-              "      <th>toCoupon_GEQ5min</th>\n",
-              "      <th>toCoupon_GEQ15min</th>\n",
-              "      <th>toCoupon_GEQ25min</th>\n",
-              "      <th>direction_same</th>\n",
-              "      <th>direction_opp</th>\n",
-              "      <th>Y</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Alone</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>55</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Restaurant(&lt;20)</td>\n",
-              "      <td>1d</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>unknown</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>10AM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>unknown</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>10AM</td>\n",
-              "      <td>Carry out &amp; Take away</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>unknown</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>2h</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>unknown</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>No Urgent Place</td>\n",
-              "      <td>Friend(s)</td>\n",
-              "      <td>Sunny</td>\n",
-              "      <td>80</td>\n",
-              "      <td>2PM</td>\n",
-              "      <td>Coffee House</td>\n",
-              "      <td>1d</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>21</td>\n",
-              "      <td>Unmarried partner</td>\n",
-              "      <td>...</td>\n",
-              "      <td>never</td>\n",
-              "      <td>unknown</td>\n",
-              "      <td>4~8</td>\n",
-              "      <td>1~3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5 rows × 25 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       destination  passanger weather  temperature  time  \\\n",
-              "0  No Urgent Place      Alone   Sunny           55   2PM   \n",
-              "1  No Urgent Place  Friend(s)   Sunny           80  10AM   \n",
-              "2  No Urgent Place  Friend(s)   Sunny           80  10AM   \n",
-              "3  No Urgent Place  Friend(s)   Sunny           80   2PM   \n",
-              "4  No Urgent Place  Friend(s)   Sunny           80   2PM   \n",
-              "\n",
-              "                  coupon expiration  gender age      maritalStatus  ...  \\\n",
-              "0        Restaurant(<20)         1d  Female  21  Unmarried partner  ...   \n",
-              "1           Coffee House         2h  Female  21  Unmarried partner  ...   \n",
-              "2  Carry out & Take away         2h  Female  21  Unmarried partner  ...   \n",
-              "3           Coffee House         2h  Female  21  Unmarried partner  ...   \n",
-              "4           Coffee House         1d  Female  21  Unmarried partner  ...   \n",
-              "\n",
-              "   CoffeeHouse CarryAway RestaurantLessThan20 Restaurant20To50  \\\n",
-              "0        never   unknown                  4~8              1~3   \n",
-              "1        never   unknown                  4~8              1~3   \n",
-              "2        never   unknown                  4~8              1~3   \n",
-              "3        never   unknown                  4~8              1~3   \n",
-              "4        never   unknown                  4~8              1~3   \n",
-              "\n",
-              "  toCoupon_GEQ5min toCoupon_GEQ15min toCoupon_GEQ25min direction_same  \\\n",
-              "0                1                 0                 0              0   \n",
-              "1                1                 0                 0              0   \n",
-              "2                1                 1                 0              0   \n",
-              "3                1                 1                 0              0   \n",
-              "4                1                 1                 0              0   \n",
-              "\n",
-              "  direction_opp  Y  \n",
-              "0             1  1  \n",
-              "1             1  0  \n",
-              "2             1  1  \n",
-              "3             1  0  \n",
-              "4             1  0  \n",
-              "\n",
-              "[5 rows x 25 columns]"
-            ]
-          },
-          "execution_count": 40,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 12684 entries, 0 to 12683\n",
+            "Data columns (total 25 columns):\n",
+            " #   Column                Non-Null Count  Dtype \n",
+            "---  ------                --------------  ----- \n",
+            " 0   destination           12684 non-null  object\n",
+            " 1   passanger             12684 non-null  object\n",
+            " 2   weather               12684 non-null  object\n",
+            " 3   temperature           12684 non-null  int64 \n",
+            " 4   time                  12684 non-null  object\n",
+            " 5   coupon                12684 non-null  object\n",
+            " 6   expiration            12684 non-null  object\n",
+            " 7   gender                12684 non-null  object\n",
+            " 8   age                   12684 non-null  object\n",
+            " 9   maritalStatus         12684 non-null  object\n",
+            " 10  has_children          12684 non-null  int64 \n",
+            " 11  education             12684 non-null  object\n",
+            " 12  occupation            12684 non-null  object\n",
+            " 13  income                12684 non-null  object\n",
+            " 14  Bar                   12684 non-null  object\n",
+            " 15  CoffeeHouse           12684 non-null  object\n",
+            " 16  CarryAway             12684 non-null  object\n",
+            " 17  RestaurantLessThan20  12684 non-null  object\n",
+            " 18  Restaurant20To50      12684 non-null  object\n",
+            " 19  toCoupon_GEQ5min      12684 non-null  int64 \n",
+            " 20  toCoupon_GEQ15min     12684 non-null  int64 \n",
+            " 21  toCoupon_GEQ25min     12684 non-null  int64 \n",
+            " 22  direction_same        12684 non-null  int64 \n",
+            " 23  direction_opp         12684 non-null  int64 \n",
+            " 24  Y                     12684 non-null  int64 \n",
+            "dtypes: int64(8), object(17)\n",
+            "memory usage: 2.4+ MB\n"
+          ]
         }
       ],
       "source": [
-        "data.head()\n",
-        "#data.info()\n"
+        "#data.head()\n",
+        "data.info(max_cols=None)\n"
       ]
     },
     {
@@ -555,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 58,
       "metadata": {
         "id": "tMBlWuGq_qRJ"
       },
@@ -623,8 +448,35 @@
       "metadata": {
         "id": "LBOrN-XM_qRK"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['never' 'less1' '1~3' 'gt8' 'unknown' '4~8']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'People who accepted the coupon and went to the bar went less than equal to 3 times '"
+            ]
+          },
+          "execution_count": 81,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(bar_coupon_data[\"Bar\"].unique())\n",
+        "\n",
+        "bar_lte_3_accepted =  bar_coupon_data[(bar_coupon_data['Y'] == 1) & ((bar_coupon_data['Bar'] =='less1') | (bar_coupon_data['Bar'] =='1-3') )].shape[0]\n",
+        "bar_gt_3_accepted = bar_coupon_data[(bar_coupon_data['Y'] == 1) & ((bar_coupon_data['Bar'] =='gt8') | (bar_coupon_data['Bar'] =='4-8') )].shape[0]\n",
+        "assert bar_lte_3_accepted>bar_gt_3_accepted\n",
+        "\n",
+        "f\"People who accepted the coupon and went to the bar, went {'less than equal to 3 times' if bar_lte_3_accepted > bar_gt_3_accepted else 'more than 3 times'}\"\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
